--- a/projects/amen/views/template.html
+++ b/projects/amen/views/template.html
@@ -13,7 +13,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style/master.min.css">
+  <link rel="stylesheet" href="style/amen.min.css">
   <style>
     body {
       opacity: 0;
@@ -34,8 +34,8 @@
   <header>
     <nav>
       <ul>
-        <li><a href="projects/amen/views/dashboard/index.html">Dashboard</a></li>
-        <li><a href="projects/amen/views/mapping/index.html">Mapping</a></li>
+        <li><a href="views/dashboard/index.html">Dashboard</a></li>
+        <li><a href="views/mapping/index.html">Mapping</a></li>
       </ul>
     </nav>
   </header>
@@ -72,8 +72,8 @@
   </footer>
   <!-- scripts -->
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-  <script src="projects/amen/assets/scripts/site.js"></script>
-  <script src="assets/scripts/headroom.js"></script>
+  <script src="assets/scripts/site.js"></script>
+  <script src="../../assets/scripts/headroom.js"></script>
   <script>
     // CHANGE CSS WHEN PAGE LOADS
     $(document).ready(function () {
