--- a/projects/amen/style/amen.css
+++ b/projects/amen/style/amen.css
@@ -1758,3 +1758,57 @@ html.dark .button.icon:focus {
 .button-group.right .button:last-of-type {
   margin-right: 0;
 }
+
+.card ul.mapping {
+  position: relative;
+  padding: var(--spacing--4) 0 var(--spacing--20);
+  list-style-type: none;
+}
+.card ul.mapping:after {
+  display: block;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 1px;
+  background-color: var(--color--border);
+  content: "";
+}
+.card ul.mapping:last-of-type {
+  padding-bottom: 0;
+}
+.card ul.mapping:last-of-type:after {
+  display: none;
+}
+.card ul.mapping li {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  position: relative;
+  width: 100%;
+  padding: var(--spacing--4) 0;
+}
+.card ul.mapping li:first-of-type {
+  padding: 0;
+  font-weight: 700;
+}
+.card ul.mapping li:first-of-type:after {
+  display: none;
+}
+.card ul.mapping li:last-of-type {
+  padding-bottom: 0;
+}
+.card ul.mapping li:last-of-type:after {
+  display: none;
+}
+.card ul.mapping li span {
+  display: flex;
+  width: calc(33.3333333333% - var(--spacing--8));
+  overflow: scroll;
+  white-space: nowrap;
+}
+
+code {
+  font-size: var(--p);
+}
