--- a/projects/amen/views/mapping/index.html
+++ b/projects/amen/views/mapping/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1,minimum-scale=1">
   <title>AMEN Categorization Skunk Works | TigerConnect</title>
-  <base href="../../../../">
+  <base href="../../">
   <!-- css -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
     integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
@@ -13,7 +13,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style/master.min.css">
+  <link rel="stylesheet" href="style/amen.min.css">
   <style>
     body {
       opacity: 0;
@@ -34,7 +34,7 @@
   <header>
     <nav>
       <ul>
-        <li><a href="projects/amen/views/dashboard/index.html">Dashboard</a></li>
+        <li><a href="views/dashboard/index.html">Dashboard</a></li>
         <li>Mapping</li>
       </ul>
     </nav>
@@ -86,7 +86,7 @@
                       <path d="M12 15v-10"></path>
                     </svg>
                   </span>
-                  <a href="projects/amen/views/mapping/lab-results/index.html" class="button tertiary">Edit</a>
+                  <a href="views/mapping/lab-results/index.html" class="button tertiary">Edit</a>
                   <!-- <button class="tertiary" disabled>Edit</button> -->
                 </span>
               </li>
@@ -145,8 +145,8 @@
   </footer>
   <!-- scripts -->
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-  <script src="projects/amen/assets/scripts/site.js"></script>
-  <script src="assets/scripts/headroom.js"></script>
+  <script src="assets/scripts/site.js"></script>
+  <script src="../../assets/scripts/headroom.js"></script>
   <script>
     // CHANGE CSS WHEN PAGE LOADS
     $(document).ready(function () {
