--- a/projects/amen/views/mapping/lab-results/index.html
+++ b/projects/amen/views/mapping/lab-results/index.html
@@ -50,17 +50,17 @@
           <ul class="mapping">
             <li>
               <span class="field">Field</span>
-              <span class="entity">Entity</span>
+              <span class="element">Element</span>
               <span class="preview">Preview</span>
             </li>
             <li>
               <span class="field">MRN</span>
-              <span class="entity"><code>PID.2</code></span>
+              <span class="element"><code>PID.2</code></span>
               <span class="preview">E00000329</span>
             </li>
             <li>
               <span class="field">Name</span>
-              <span class="entity"><code>PID-5.2 + PID-5.1</code></span>
+              <span class="element"><code>PID-5.2 + PID-5.1</code></span>
               <span class="preview">TOM BLUEAPPLE</span>
             </li>
           </ul>
@@ -68,22 +68,22 @@
           <ul class="mapping">
             <li>
               <span class="field">Field</span>
-              <span class="entity">Entity</span>
+              <span class="element">Element</span>
               <span class="preview">Preview</span>
             </li>
             <li>
               <span class="field">Unit</span>
-              <span class="entity"><code>PV-3.1</code></span>
+              <span class="element"><code>PV-3.1</code></span>
               <span class="preview">ICU</span>
             </li>
             <li>
               <span class="field">Room</span>
-              <span class="entity"><code>PV-3.2</code></span>
+              <span class="element"><code>PV-3.2</code></span>
               <span class="preview">101</span>
             </li>
             <li>
               <span class="field">Bed</span>
-              <span class="entity"><code>PV-3.3</code></span>
+              <span class="element"><code>PV-3.3</code></span>
               <span class="preview">A</span>
             </li>
           </ul>
@@ -91,27 +91,27 @@
           <ul class="mapping">
             <li>
               <span class="field">Field</span>
-              <span class="entity">Entity</span>
+              <span class="element">Element</span>
               <span class="preview">Preview</span>
             </li>
             <li>
-              <span class="field">Type</span>
-              <span class="entity"><code>OBX[1]-3.2</code></span>
+              <span class="field">Value Type</span>
+              <span class="element"><code>OBX[1]-3.2</code></span>
               <span class="preview">HEPARIN</span>
             </li>
             <li>
               <span class="field">Units</span>
-              <span class="entity"><code>OBX[1]-6</code></span>
+              <span class="element"><code>OBX[1]-6</code></span>
               <span class="preview">SECONDS</span>
             </li>
             <li>
-              <span class="field">Range</span>
-              <span class="entity"><code>OBX[1]-7</code></span>
+              <span class="field">References Range</span>
+              <span class="element"><code>OBX[1]-7</code></span>
               <span class="preview">9.6-11.2</span>
             </li>
             <li>
-              <span class="field">Value</span>
-              <span class="entity"><code>OBX[1]-5</code></span>
+              <span class="field">Observation Value</span>
+              <span class="element"><code>OBX[1]-5</code></span>
               <span class="preview">12</span>
             </li>
           </ul>
